<resources>
    <string name="app_name">Dotpict</string>
    <string name="newgrid">Create new grid</string>
    <string name="savegrid">Save your grid</string>
    <string name="btnChooseColor">Choose color</string>
    <string name="mustbe">Number must be between</string>
    <string name="and">and</string>
    <string name="save_grid_as_image">Save grid as image</string>
    <string name="gridtools">Grid tools</string>
    <string name="somethingwrong">Something went wrong while saving, please try again</string>
    <string name="done">Done</string>
    <string name="betweenmust">Number must be between</string>
    <string name="andtitel"> and </string>
    <string name="fillName">Please fill in a name.</string>
    <string name="sureDelete">Are you sure you wanne remove this grid?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Ok">Ok</string>
    <string name="Cancel">Cancel</string>
    <string name="sureloading">Are you sure you wanne load this grid?</string>
    <string name="pressbackagain">Please click BACK again to exit</string>
    <string name="gridloadedmessage">Grid loaded.</string>
    <string name="newgridmessage">New grid created.</string>
    <string name="filesavedmessage">File saved:</string>
    <string name="somethingwentwrongdelete">Something went wrong while deleting. Please try again.</string>
    <string name="toolsbutton">Tools</string>
    <string name="gridoptionsbutton">Grid options</string>
    <string name="choosecolorbutton">Choose Color</string>
    <string name="erasermodebutton">Eraser mode</string>
    <string name="circle_modebutton">Circle mode</string>
    <string name="fill_modebutton">Fill mode</string>
    <string name="drawing_modebutton">Drawing mode</string>
    <string name="saved_gridstextview">SAVED GRIDS</string>
    <string name="choose_sizedialog">Choose size</string>
    <string name="save_namedialog">Save name:</string>
    <string name="savebuttondialog">Save</string>
    <string name="delete">Delete</string>
    <string name="name_holdertext">Name Holder</string>
</resources>
