<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/gridOptions"
            android:text="@string/gridoptionsbutton"
            android:layout_margin="3dp"
            android:background="@drawable/item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_weight="1.3"
                android:id="@+id/choosecolor"
                android:text="@string/choosecolorbutton"
                android:layout_margin="3dp"
                android:background="@drawable/item"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

            <RadioGroup
                android:layout_weight="1"
                android:layout_margin="3dp"
                android:background="@drawable/item"
                android:id="@+id/rgTools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <RadioButton
                    android:id="@+id/state1"
                    android:checked="true"
                    android:text="@string/drawing_modebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/state2"
                    android:text="@string/erasermodebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/state3"
                    android:text="@string/circle_modebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <RadioButton
                    android:id="@+id/state4"
                    android:text="@string/fill_modebutton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </RadioButton>

            </RadioGroup>
        </LinearLayout>




    <Button
        android:id="@+id/takeImag"
        android:text="Camera to grid"
        android:layout_margin="3dp"
        android:background="@drawable/item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </LinearLayout>
    </ScrollView>
</LinearLayout>